@@ -1,2 +1,2 @@
 #
-__version__ = '2.6.1.dev2'
+__version__ = '2.6.1.dev3'
